bring back avatar on small devices, fix home hyperlink

--- a/custom.css
+++ b/custom.css
@@ -67,6 +67,6 @@
   }
 
   #avatar {
-    display: none;
+    display: max-width: 30%;
   }
 }
